// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StraightElement renders with default values 1`] = `
<body>
  <div>
    <rect
      height="1"
      width="1"
      x="0"
      y="0"
    />
  </div>
</body>
`;

exports[`StraightElement renders with the given parameters 1`] = `
<body>
  <div>
    <rect
      class="tile"
      fill="red"
      height="100"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
      width="80"
      x="100"
      y="150"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter class is modified 1`] = `
<body>
  <div>
    <rect
      class="curve"
      fill="red"
      height="100"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
      width="80"
      x="100"
      y="150"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter fill is modified 1`] = `
<body>
  <div>
    <rect
      class="tile"
      fill="blue"
      height="100"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
      width="80"
      x="100"
      y="150"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter height is modified 1`] = `
<body>
  <div>
    <rect
      class="tile"
      fill="red"
      height="40"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
      width="80"
      x="100"
      y="150"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter stroke is modified 1`] = `
<body>
  <div>
    <rect
      class="tile"
      fill="red"
      height="100"
      stroke="blue"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
      width="80"
      x="100"
      y="150"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter strokeWidth is modified 1`] = `
<body>
  <div>
    <rect
      class="tile"
      fill="red"
      height="100"
      stroke="green"
      stroke-width="3"
      style="fill: #444;"
      transform="rotate(90)"
      width="80"
      x="100"
      y="150"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter style is modified 1`] = `
<body>
  <div>
    <rect
      class="tile"
      fill="red"
      height="100"
      stroke="green"
      stroke-width="2"
      style="fill: #888"
      transform="rotate(90)"
      width="80"
      x="100"
      y="150"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter transform is modified 1`] = `
<body>
  <div>
    <rect
      class="tile"
      fill="red"
      height="100"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(180)"
      width="80"
      x="100"
      y="150"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter width is modified 1`] = `
<body>
  <div>
    <rect
      class="tile"
      fill="red"
      height="100"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
      width="40"
      x="100"
      y="150"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter x is modified 1`] = `
<body>
  <div>
    <rect
      class="tile"
      fill="red"
      height="100"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
      width="80"
      x="40"
      y="150"
    />
  </div>
</body>
`;

exports[`StraightElement updates when the parameter y is modified 1`] = `
<body>
  <div>
    <rect
      class="tile"
      fill="red"
      height="100"
      stroke="green"
      stroke-width="2"
      style="fill: #444;"
      transform="rotate(90)"
      width="80"
      x="100"
      y="40"
    />
  </div>
</body>
`;
